dbeaver/pro#6574 Get rid of Display.getDefault()